<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Number_0">0</string>
    <string name="Number_1">1</string>
    <string name="Number_2">2</string>
    <string name="Number_3">3</string>
    <string name="Number_4">4</string>
    <string name="Number_5">5</string>
    <string name="Number_6">6</string>
    <string name="Number_7">7</string>
    <string name="Number_8">8</string>
    <string name="Number_9">9</string>
    <string name="decimal_point">.</string>
	<string name="Delete">Del</string>
	<string name="Clear">C</string>
	<string name="Multiplication">*</string>
	<string name="Division">/</string>
	<string name="Addition">+</string>
	<string name="Subtraction">-</string>
	<string name="Answer">=</string>
	<string name="Display">0</string>
</resources>
